# testcontainer-fastapi-demo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TODO  TODO.md  docker-compose.yml  example.env  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  lint.yaml  release.yaml  test.yaml
app/: exceptions.py  main.py  routes.py
app/api/endpoints/: auth.py  liveness.py  post.py  readiness.py  startup.py
app/config/: logging.py
app/core/: config.py  database.py  logging.py  reporting.py
app/crud/: post.py
app/dal/: posts.py
app/db/: connection.py  tools.py
app/models/: __init__.py  address.py  base.py  city.py  country.py  post.py  state.py  user.py
app/schemas/: post.py
app/utils/: filesystem.py
docs/: conventional-commits.md  docker.md  middleware.md  pytest-bdd.md  pytest.md  scopes.md  security.md  testcontainers.md
features/: liveness.feature  post.feature  readiness.feature  registration.feature  startup.feature
scripts/: create_schema.py
sql/data/: 001_insert_post.sql
sql/schema/: 001_create_posts_table.sql
tests/: conftest.py  junit.xml  test_example.py
tests/bdd/: conftest.py  junit.xml  test_country.py  test_liveness.py  test_post.py  test_readiness.py  test_startup.py
tests/bdd/features/: kubernetes.feature  post.feature
tests/bdd/features/steps/: test_post.py
tests/bdd/fixtures/: common.py  testcontainers.py
tests/bdd/step_definitions/: common_steps.py  country_steps.py  liveness_steps.py  post_steps.py  startup_steps.py
tests/bdd/steps/: common.py  liveness.py  post.py  readiness.py  startup.py
tests/features/: country.feature  liveness.feature  startup.feature
tests/integration/: conftest.py  test_example_integration.py
tests/unit/: test_example.py
