[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testcontainer-fastapi-demo"
version = "0.0.0"
description = "An example project using testcontainers along with FastAPI."
authors = [
    { name = "Omar Crosby", email = "omar.crosby@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "sqlmodel",
    "structlog",
    "psycopg2-binary",
    "python-dotenv",
    "requests"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-bdd",
    "testcontainers",
    "semantic-release"
]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
changelog_file = "CHANGELOG.md"