[metadata]
name = testcontainer-fastapi-demo
version = 0.1.0
description = An example project using testcontainers along with FastAPI.
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    fastapi
    uvicorn
    pytest
    pytest-bdd
    testcontainers
    sqlalchemy
    pydantic
python_requires = >=3.7

[options.extras_require]
dev =
    black
    isort
    flake8

[options.packages.find]
exclude =
    tests


[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.venv,venv
ignore = E203, E266, E501, W503

[pylint]
max-line-length = 88
disable = C0114, C0115, C0116, R0903, E0611

[tool:pytest]
addopts = --maxfail=2 --disable-warnings
testpaths = tests
